UPDATE TO HIGHLIGHT THE SECTION THE USER IS VIEWING

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,11 @@ section {
     color: #fff;
 }
 
+.glow {
+background-color: #cc1;
+
+
+}
 
 /* ---- Theme Rules ---- */
 /* Landing Container Styles */
